--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
@@ -16,6 +20,7 @@
     "react-scripts": "5.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
