--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
