--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
     "strict": true, /* Enable all strict type-checking options. */
     "skipLibCheck": true, /* Skip type checking all .d.ts files. */
     "jsx": "react-jsx"
-  }
+  },
+  "include": [
+    "src/components",
+    "src/custom.d.ts"
+  ]
 }
